# knowledge-graph-mcp

./: .gitignore  README.md  pyproject.toml  pytest.ini
docker/: docker-compose.yml
schemas/: medical_domain.yaml  software_engineering.yaml
scripts/: schema_manager.py
src/knowledge_graph_mcp/: server.py
src/knowledge_graph_mcp/resources/: mcp_resources.py  schema_loader.py  schemas.py
src/knowledge_graph_mcp/tools/: db_operations.py  schema_validation.py
src/knowledge_graph_mcp/tools/mcp_tools/: __init__.py  analytics_tools.py  combined_tools.py  node_tools.py  relationship_tools.py  utility_tools.py  vector_tools.py
src/knowledge_graph_mcp/utils/: index_init.py  property_filter.py  text_extractor.py  vector_embedding.py
tests/: __init__.py  conftest.py  test_db_operations.py  test_integration.py  test_mcp_server.py  test_neo4j_connector.py  test_performance.py  test_schema_resources.py
